--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: "https://ashthetik.github.io"
 github:
   username: Ashthetik # change to your GitHub username
 
-twitter:
-  username: # change to your Twitter username
+# twitter:
+#   username: # change to your Twitter username
 
 social:
   # Change to your full name.
